5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1811_2566.log
== TEST (2019-06-06 19:16:56) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 65
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
print(cont)
for i in range(size(cont)):
	print(round(cont[i], 1))
-- ERROR:
File "XXXX", line 11
    elif f[i] == 65
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:04) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
print(cont)
for i in range(size(cont)):
	print(round(cont[i], 1))
-- ERROR:
File "XXXX", line 11
    elif f[i] == 5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:16) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
print(cont)
for i in range(size(cont)):
	print(round(cont[i], 1))
-- ERROR:
File "XXXX", line 11
    elif f[i] == 5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:22) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
print(cont)
for i in range(size(cont)):
	print(round(cont[i], 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:02) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	print(round(cont[i], 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:13) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	print(round(cont[i], 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:18:15) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	print(round(cont[i], 2))
-- EXECUTION TIME:
0.930235
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
3
0
0
3
4
6
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
1
2
4
5
5
8
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas: 2
1
3
1
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:52) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	print(round(eval(cont[i], 1)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:02) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	print(round(eval(cont[i], 1)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:40) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	f2 = array(eval(cont))
	print(round(f2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:55) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	f2 = array(eval(cont))
	print(round(f2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:20:04) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	f2 = array(eval(cont))
	print(round(f2, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:20:09) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	f2 = array(eval(cont))
	print(round(f2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:20:16) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	f2 = array(eval(cont))
	print(round(f2, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:21:00) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	fi = round(cont, 1)
	f2 = array(eval(fi))
	print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:21:10) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	fi = round(cont, 1)
	f2 = array(eval(fi))
	print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:31:00) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = (cont[i]/10)*100
print(round(nv, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:31:22) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = (cont[i]/10)*100
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:31:33) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = (cont[i]/10)*100
print(nv)
-- EXECUTION TIME:
0.873847
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30.  0.  0. 30. 40. 60.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10. 20. 40. 50. 50. 80.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20. 10. 30. 10. 20. 40.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:31:40) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = (cont[i]/10)*100
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:32:30) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:32:41) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- EXECUTION TIME:
0.901358
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30.  0.  0. 30. 40. 60.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10. 20. 40. 50. 50. 80.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20. 10. 30. 10. 20. 40.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:32:47) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:33:15) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:33:36) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:33:39) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/10)*100, 1)
print(nv)
-- EXECUTION TIME:
1.54691
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
digite as faltas: [30.  0.  0. 30. 40. 60.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
digite as faltas: [10. 20. 40. 50. 50. 80.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
digite as faltas: [20. 10. 30. 10. 20. 40.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:35:17) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/(size(f)))*100, 1)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:35:25) 
-- CODE:
from numpy import*
f = array(eval(input("digite as faltas: "))) #de 2 a 7
cont = zeros(6, dtype=int)
for i in range(size(f)): 
	if f[i] == 2:
		cont[0] = cont[0] + 1
	elif f[i] == 3:
		cont[1] = cont[1] + 1
	elif f[i] == 4:
		cont[2] = cont[2] + 1
	elif f[i] == 5:
		cont[3] = cont[3] + 1
	elif f[i] == 6:
		cont[4] = cont[4] + 1
	elif f[i] == 7:
		cont[5] = cont[5] + 1
nv = zeros(6, dtype=float)
for i in range(size(nv)):
	nv[i] = round((cont[i]/(size(f)))*100, 1)
print(nv)
-- EXECUTION TIME:
0.789863
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
